--- a/index.html
+++ b/index.html
@@ -302,7 +302,8 @@ function startTimer() {
 	var video = document.querySelector('video')
 	var imageData = new ImageDataEntity(takeSnapshot(video));
 	//console.log(JSON.stringify(imageData))
-	decodeQR(imageData);
+			    console.log(JSON.stringify(imageData))
+	//decodeQR(imageData);
 	}, 1000); 
 } 
 
