--- a/index.html
+++ b/index.html
@@ -276,7 +276,9 @@ class ImageDataEntity {
 
 																																																																								 
 function decodeQR(imageData){
-  fetch("https://api01-b.hekate.club/devTools/decodeQR", {
+					     // https://192.168.0.103:8443/qr2
+  //fetch("https://api01-b.hekate.club/devTools/decodeQR", {
+  fetch("https://192.168.0.103:8443/qr2", {							 
   method: 'POST', // or 'PUT'
   headers: {
       'Content-Type': 'application/json'
