--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@ class ImageDataEntity {
 function decodeQR(imageData){
 					     // https://192.168.0.103:8443/qr2
   //fetch("https://api01-b.hekate.club/devTools/decodeQR", {
-  fetch("https://192.168.0.103:8443/qr2", {							 
+  fetch("https://api01-b.hekate.club/devTools/decodeQR", {							 
   method: 'POST', // or 'PUT'
   headers: {
       'Content-Type': 'application/json'
