--- a/f.html
+++ b/f.html
@@ -48,6 +48,7 @@ window.onload = () => {
   camera = document.querySelector("[camera]");
   lookathandler = document.querySelector("[lookathandler]");
   drawDestinations();
+	startTimer();						  
 };    
 							  
 AFRAME.registerComponent('lookathandler', {
