--- a/f.html
+++ b/f.html
@@ -108,6 +108,9 @@ var targetDestination = "Q160"
 var originDestination = "Q407"  
 var mainDestination = getMainDestination(originDestination, targetDestination);
 var otherDestinations = getOtherDestinations(originDestination);
+			      
+console.log(mainDestination)		
+console.log(otherDestinations)				      
 
 
 }
