--- a/f.html
+++ b/f.html
@@ -496,10 +496,12 @@ function stopTimer() {
 }	
 
 function takeSnapshot(video){
+	if(video != null) {	    
 	// Here we're using a trick that involves a hidden canvas element.  
 	var hidden_canvas = document.querySelector('canvas'),
 	context = hidden_canvas.getContext('2d');
 
+			    
 	var width = video.videoWidth,
 	height = video.videoHeight;
 
@@ -515,6 +517,7 @@ function takeSnapshot(video){
 		// Turn the canvas image into a dataURL that can be used as a src for our photo.
 		return hidden_canvas.toDataURL('image/png');
 	}
+	 }
 }			    
 </script>
 </body>
