--- a/f.html
+++ b/f.html
@@ -422,6 +422,15 @@ function getOtherDestinations(originDestination) {
            }
          }
         }
+			       
+	 destinations.set("test",
+                 new Destination("test",
+                   50.04800247382,
+                   14.30461277704,
+                   "2",
+                   10          
+                   ))
+			       
         var listOfDestinations = [];
         console.log(destinations)
          for (var [key, value] of destinations) {
