--- a/f.html
+++ b/f.html
@@ -338,7 +338,7 @@ for (var i = 0; i < listOfDestinations.length-1; i++) {
 return listOfDestinations;
 }
 
-function getMainDestination(originDestination, targetDestination){
+async function getMainDestination(originDestination, targetDestination){
       var originLat;
       var originLon;                                     
       var navigationSignOrientation; 
