--- a/react.html
+++ b/react.html
@@ -267,8 +267,8 @@ function createArrowEntity(imageSrc, angle){
 
 function createTextEntity(textValue, textColor, size, position){
     var textEntity = document.createElement('a-entity');
-    //var textParamas = "value:" + textValue + "; color:" + textColor + ";shader: msdf; font:fonts/Roboto-Bold-msdf.json; fontImage:fonts/Roboto-Bold-msdf.png; negate:false; align:center" 
-    var textParamas = "value:" + textValue + "; color:" + textColor + ";  align:center" 
+    var textParamas = "value:" + textValue + "; color:" + textColor + ";shader: msdf; font:fonts/Roboto-Bold-msdf.json; fontImage:fonts/Roboto-Bold-msdf.png; negate:false; align:center" 
+    //var textParamas = "value:" + textValue + "; color:" + textColor + ";  align:center" 
   
 
     textEntity.setAttribute('material', "depthTest: false; transparent: true")	
