--- a/react.html
+++ b/react.html
@@ -267,7 +267,7 @@ function createArrowEntity(imageSrc, angle){
 
 function createTextEntity(textValue, textColor, size, position){
     var textEntity = document.createElement('a-entity');
-    var textParamas = "value:" + textValue + "; color:" + textColor + ";shader: msdf; font:fonts/Roboto-Bold-msdf.json; fontImage:fonts/Roboto-Bold-msdf.png; negate:false; align:center" 
+    var textParamas = "value:" + textValue + "; color:" + textColor + ";shader: msdf; font:fonts/Roboto-Bold-msdf.json; negate:false; align:center" 
     //var textParamas = "value:" + textValue + "; color:" + textColor + ";  align:center" 
   
 
