--- a/react.html
+++ b/react.html
@@ -457,22 +457,16 @@ function getOtherDestinations(originDestination) {
       }); 
 }  
 			    
-class ImageDataEntity {
-  constructor(qdata) {
-     this.qdata = qdata;  
-  }
-}
-
 function decodeQR(imageData){
-    if (imageData && width && height) {
-	    const code = jsQR(imageData, width, height);
-    }
-    else{
-        return null;
-    }
+    var code = jsQR(imageData.data, imageData.width, imageData.height, {
+          inversionAttempts: "dontInvert",
+        });
+
+        document.querySelector("#detectedqr").innerHTML = "sadasd";
 
     if (code) {
-        var url_string = code
+        document.querySelector("#detectedqr").innerHTML = "failxxx";
+        var url_string = code.data
 		var url = new URL(url_string);
 		var ori = url.searchParams.get("ori");
 		if(ori != null)		  
@@ -482,11 +476,12 @@ function decodeQR(imageData){
 		}
 		else
 		{																		
-			document.querySelector("#detectedqr").innerHTML = code;
-            return code;
+			document.querySelector("#detectedqr").innerHTML = code.data;
+            return code.data;
 		}        
     }
     else{
+        document.querySelector("#detectedqr").innerHTML = "test";
         return null;
     }																																																																		 
 }			
@@ -499,12 +494,9 @@ function startTimer() {
 	//console.log(imageData);
 	//callMyLocal(imageData);
 	var video = document.querySelector('video')
-    if(video != null)
-    {
-	    var imageData = new ImageDataEntity(takeSnapshot(video));
-	    //console.log(JSON.stringify(imageData))
-	    decodeQR(imageData, video.videoWidth, video.videoHeight);
-    }
+	var imageData = takeSnapshot(video);
+	//console.log(JSON.stringify(imageData))
+	decodeQR(imageData);
 	}, 1000); 
 } 
 
@@ -512,17 +504,16 @@ function stopTimer() {
 	clearInterval(timer);  
 }	
 
+
+
+
 function takeSnapshot(video){
 	// Here we're using a trick that involves a hidden canvas element.  
-    if(video == null)
-    {
-        return null;
-    }
-	var hidden_canvas = document.querySelector('canvas'),
-	context = hidden_canvas.getContext('2d');
+	var hidden_canvas = document.querySelector('canvas');
+	var context = hidden_canvas.getContext('2d');
 
-	var width = video.videoWidth,
-	height = video.videoHeight;
+	var width = video.videoWidth;
+	var height = video.videoHeight;
 
 	if (width && height) {
 		// Setup a canvas with the same dimensions as the video.
@@ -533,10 +524,14 @@ function takeSnapshot(video){
 		// Make a copy of the current frame in the video on the canvas.
 		context.drawImage(video, 0, 0, width, height);
 
+
+
+
 		// Turn the canvas image into a dataURL that can be used as a src for our photo.
-		return hidden_canvas.toDataURL('image/png');
+        return context.getImageData(0, 0, width, height);
+		//return hidden_canvas.toDataURL('image/png');
 	}
-}			    
+}				    
 </script>
 </body>
 </html>
