--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@ var wrapper;
 const SCALE = 0.1; // 5
 const R = 3;	
 var arrowId = 0;
+var camera;								   
 
 								   
 window.onload = () => {
