--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <!-- <a-scene embedded arjs='debugUIEnabled: false; sourceType: video; sourceUrl:../../data/videos/headtracking.mp4;'>
 arjs='trackingMethod: best; patternRatio: 0.9; debugUIEnabled: false; maxDetectionRate:30;' antialias="true"
 -->
-<a-scene embedded arjs=’sourceType: webcam; trackingMethod:best;’ vr-mode-ui='enabled: false'>
+<a-scene embedded arjs=’sourceType: webcam; trackingMethod:best;’ renderer="logarithmicDepthBuffer: true; antialias: true;" vr-mode-ui='enabled: false'>
 <a-entity id="mouseCursor" cursor="rayOrigin: mouse" raycaster="objects: .intersectable; useWorldCoordinates: true;"></a-entity>
 <!-- END: Middle HTML -->
 
